<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string
		name="app_name">PRemoteDroid</string>
	<string
		name="text_settings">Settings</string>
	<string
		name="text_get_server">Get server</string>
	<string
		name="text_help">Help</string>
	<string
		name="text_server">Server</string>
	<string
		name="text_password">Password</string>
	<string
		name="text_sensitivity">Sensitivity</string>
	<string
		name="text_acceleration">Acceleration</string>
	<string
		name="text_connection">Connection</string>
	<string
		name="text_control">Control</string>
	<string
		name="text_help_description_content">Use your phone as a remote control device for your computer over Wifi!\n\nMain features :\n - Mouse control\n - Secure (password) connection\n - Screen capture (but it is NOT a VNC viewer)\n - Keyboard control (not implemented yet)\n</string>
	<string
		name="text_help_usage_content">There are two kinds of mouse control : touchpad and trackpad (touchpad + trackpoint).\nPress, drag and hold the screen to move the mouse.\n\nTo click, just press briefly the screen.\n\nTo hold your click, press and hold the screen (do not move!).\nAfter the vibration, you can move.\nTo release your click, do a simple click.\n\nManual click buttons are available around the screen.\nHold a button one second, and it will stay pressed.\n</string>
	<string
		name="text_help_install_content_1">Press the \"Get server\" button to get the server on your computer.\nPress the \"Settings\" button to configure the connection (host, port) and your preferences (sensitivity, acceleration, ... ).\n</string>
	<string
		name="text_help_install_content_2">\nNow, read the usage instructions below.\nThen press the \"Back\" button on your phone to start using PRemoteDroid.\n</string>
	<string
		name="text_help_description">Description :</string>
	<string
		name="text_help_usage">Usage :</string>
	<string
		name="text_help_install">Install :</string>
	<string
		name="text_debug">Debug</string>
	<string
		name="text_first_run">First run</string>
	<string
		name="text_get_server_content_1">You must download and install the server part of PRemoteDroid on your PC.\n\nFirst, enable Wifi on your phone and check if it works.\nOpen your web browser on your computer and type this URL :\n</string>
	<string
		name="text_get_server_content_2">If you can not download the file, or if the URL above looks like \"http://10.xx.xx.xx:xx\" :\n - disable \"3G network\"\n - enable Wifi\n - check if your firewall is not blocking you.\n\nBy the way, if you can not download the file, PRemoteDroid will never work.\n\nDownload and unzip the file.\nRun the server (PRemoteDroid-Server.exe on Windows, or PRemoteDroid-Server.jar on Linux and Mac OS).\n\nThe icon in the system tray allows you to configure the server (password and port).\n\nPress the \"back\" button on your phone to go back to the previous screen.</string>
	<string
		name="text_keyboard">Keyboard</string>
	<string
		name="text_screen_capture">Screen capture</string>
	<string
		name="text_format">Format</string>
	<string
		name="text_max_delay">Max delay</string>
	<string
		name="text_port">Port</string>
	<string
		name="text_enabled">Enabled</string>
	<string-array
		name="screenCaptureFormatId">
		<item>jpg</item>
		<item>png</item>
	</string-array>
	<string-array
		name="screenCaptureFormatName">
		<item>JPG</item>
		<item>PNG</item>
	</string-array>
	<string
		name="text_connection_established">Connection established</string>
	<string
		name="text_connection_closed">Connection closed</string>
	<string
		name="text_connection_refused">Connection refused</string>
	<string
		name="text_authentificated">Authentificated</string>
	<string
		name="text_not_authentificated">Not authentificated (wrong password)</string>
	<string
		name="text_keyboard_not_supported">Keyboard is not supported yet</string>
	<string
		name="text_touchpad">Touchpad</string>
	<string
		name="text_trackpad">Trackpad</string>
	<string
		name="text_control_type">Control type</string>
	<string-array
		name="control_type_id">
		<item>touchpad</item>
		<item>trackpad</item>
	</string-array>
	<string-array
		name="control_type_name">
		<item>Touchpad</item>
		<item>Trackpad</item>
	</string-array>
	<string
		name="text_click_delay">Click delay</string>
	<string
		name="text_hold_delay">Hold delay</string>
	<string
		name="text_immobile_distance">Immobile distance</string>
</resources>