<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/text_connection">
		<EditTextPreference
			android:inputType="text"
			android:defaultValue="192.168.0.1"
			android:title="@string/text_server"
			android:key="connection_server" />
		<EditTextPreference
			android:inputType="number"
			android:title="@string/text_port"
			android:defaultValue="64788"
			android:key="connection_port" />
		<EditTextPreference
			android:inputType="textPassword"
			android:defaultValue="azerty"
			android:title="@string/text_password"
			android:key="connection_password" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/text_control">
		<EditTextPreference
			android:inputType="numberDecimal"
			android:defaultValue="0.7"
			android:title="@string/text_sensitivity"
			android:key="control_sensitivity" />
		<EditTextPreference
			android:inputType="numberDecimal"
			android:defaultValue="1.5"
			android:title="@string/text_acceleration"
			android:key="control_acceleration" />
		<EditTextPreference
			android:inputType="number"
			android:defaultValue="150"
			android:title="@string/text_click_delay"
			android:key="control_click_delay" />
		<EditTextPreference
			android:inputType="number"
			android:defaultValue="500"
			android:title="@string/text_hold_delay"
			android:key="control_hold_delay" />
		<EditTextPreference
			android:inputType="numberDecimal"
			android:defaultValue="10"
			android:title="@string/text_immobile_distance"
			android:key="control_immobile_distance" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/text_screen_capture">
		<CheckBoxPreference
			android:defaultValue="false"
			android:title="@string/text_capture_enabled"
			android:key="screenCapture_enabled" />
		<ListPreference
			android:title="@string/text_capture_format"
			android:key="screenCapture_format"
			android:entries="@array/screenCaptureFormatName"
			android:entryValues="@array/screenCaptureFormatId"
			android:defaultValue="png" />
		<CheckBoxPreference
			android:defaultValue="true"
			android:title="@string/text_cursor_enabled"
			android:key="screenCapture_cursor_enabled" />
		<EditTextPreference
			android:inputType="numberDecimal"
			android:defaultValue="3"
			android:title="@string/text_cursor_size"
			android:key="screenCapture_cursor_size" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/text_debug">
		<CheckBoxPreference
			android:defaultValue="true"
			android:title="@string/text_first_run"
			android:key="debug_firstRun" />
	</PreferenceCategory>
</PreferenceScreen>